# xbot2_examples

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_simulation.bash
config/: README.md  centauro_basic.yaml  teleop_complete_example.yaml  teleop_fixed_base.srdf  teleop_fixed_base.urdf  teleop_joint_map.yaml  teleop_simple_example.yaml
docker/: attach.sh  build-examples.sh  build-gzweb.sh  build.sh  run.sh  setup-xbot2.sh  start.sh
docs/: gazebo-sim.md
models/database/: database.config
models/database/teleop/: manifest.xml  teleop.sdf
models/database/teleop_urdf/meshes/: _teleop_link0.stl  _teleop_link1.stl  _teleop_link2.stl  _teleop_link3.stl  _teleop_link4.stl  _teleop_link5.stl
models/database/teleop_urdf/meshes/simple/: _teleop_link0.capsule  _teleop_link0.stl  _teleop_link1.capsule  _teleop_link1.stl  _teleop_link2.capsule  _teleop_link2.stl  _teleop_link3.capsule  _teleop_link3.stl  _teleop_link4.capsule  _teleop_link4.stl  _teleop_link5.capsule  _teleop_link5.stl
src/cartesian_impedance/: CMakeLists.txt  CartesianImpedance_Task.cpp  CartesianImpedance_Task.h
src/cartesian_impedance/CartesianImpedance_Task_ert_rtw/: CartesianImpedance_Task.cpp  CartesianImpedance_Task.h  CartesianImpedance_Task.mk  CartesianImpedance_Task_data.cpp  CartesianImpedance_Task_private.h  CartesianImpedance_Task_targ_data_map.m  CartesianImpedance_Task_types.h  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  defines.txt  modelsources.txt  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/cartesian_impedance/CartesianImpedance_Task_ert_rtw/html/: CartesianImpedance_Task_codegen_rpt.html  CartesianImpedance_Task_coderassumptions.html  CartesianImpedance_Task_contents.html  CartesianImpedance_Task_cpp.html  CartesianImpedance_Task_data_cpp.html  CartesianImpedance_Task_h.html  CartesianImpedance_Task_interface.html  CartesianImpedance_Task_private_h.html  CartesianImpedance_Task_replacements.html  CartesianImpedance_Task_subsystems.html  CartesianImpedance_Task_survey.html  CartesianImpedance_Task_trace.html  CartesianImpedance_Task_traceInfo.js  CartesianImpedance_Task_types_h.html  define.js  rtGetInf_cpp.html  rtGetInf_h.html  rtGetNaN_cpp.html  rtGetNaN_h.html  rt_nonfinite_cpp.html  rt_nonfinite_h.html  rtmodel_h.html  rtwtypes_h.html  traceInfo.mat  traceInfo_flag.js
src/cartesian_impedance/CartesianImpedance_Task_ert_rtw/tmwinternal/: simulink_cache.xml
src/cartesio/: CMakeLists.txt  albero_cartesio_rt.cpp  albero_cartesio_rt.h  cartesio_rt.cpp  cartesio_rt.h  controllers.cpp  controllers.h  models.h  partition.cpp  partition.h
src/client_server/: CMakeLists.txt  README.md  client.cpp  client.h  server.cpp  server.h
src/clock/: CMakeLists.txt  clock.cpp  clock.h
src/device/: CMakeLists.txt  README.md  gz_rocket_server.cpp  gz_rocket_server.h  rocket_cs_device.cpp  rocket_cs_device.h  rocket_device.cpp  rocket_device.h  rocket_device_client.h  rocket_device_driver.h  rocket_packet.h  rocket_plugin.cpp  rocket_plugin.h  rocket_ros.cpp  rocket_ros.h  rocket_rt_device.cpp  rocket_rt_device.h
src/gcomp_example/: CMakeLists.txt  gcomp_example.cpp  gcomp_example.h
src/geneterated_plugin/: CMakeLists.txt  README.md  homing_example.cpp
src/geneterated_plugin/JointSpace_Task_ert_rtw/: JointSpace_Task.cpp  JointSpace_Task.h  JointSpace_Task.mk  JointSpace_Task_data.cpp  JointSpace_Task_private.h  JointSpace_Task_types.h  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/geneterated_plugin/JointSpace_Task_ert_rtw/tmwinternal/: simulink_cache.xml
src/gripper/: CMakeLists.txt  albero_gripper.cpp  albero_gripper.h  button_event.cpp  button_event.hpp  buttons.cpp  buttons.hpp
src/gripper/msg/gripper_msgs/: CMakeLists.txt  package.xml
src/gripper/msg/gripper_msgs/msg/: Gripper.msg
src/homing_example/: CMakeLists.txt  README.md  homing_example.cpp  homing_example.h
src/impedance_setpoint/: CMakeLists.txt  impedance_setpoint.cpp  impedance_setpoint.h
src/joint_impedance/: CMakeLists.txt  joint_impedance.cpp  joint_impedance.h
src/joint_space_repeat/: CMakeLists.txt  README.md  joint_space_repeat.cpp  joint_space_repeat.h
src/jointspace_task/: CMakeLists.txt  jointspace_task.cpp  jointspace_task.h
src/jointspace_task/JointSpace_Task_ert_rtw/: JointSpace_Task.cpp  JointSpace_Task.h  JointSpace_Task.mk  JointSpace_Task_data.cpp  JointSpace_Task_private.h  JointSpace_Task_targ_data_map.m  JointSpace_Task_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  modelsources.txt  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/jointspace_task/JointSpace_Task_ert_rtw/tmwinternal/: simulink_cache.xml
src/logger_plugin/: CMakeLists.txt  logger_plugin.cpp  logger_plugin.h
src/malloc_example/: CMakeLists.txt  malloc_example.cpp  malloc_example.h
src/periodic_motion/: CMakeLists.txt  periodic_motion.cpp  periodic_motion.h
src/ros_api/: CMakeLists.txt  README.md  ros_api_tutorial.cpp  ros_api_tutorial.ipynb
src/ros_from_rt/: CMakeLists.txt  README.md  ros_from_rt.cpp  ros_from_rt.h
src/talker_listener/: CMakeLists.txt  README.md  listener.cpp  listener.h  talker.cpp  talker.h
src/velocity_gesture_control/: CMakeLists.txt  velocity_gesture_control.cpp  velocity_gesture_control.h
world/: teleop_xbot2.world
